fix: responsivness on mobile

--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ header .container {
 	width: 2.5rem;
 	height: 2.5rem;
 	background-image: url(images/pb-logo.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
 	cursor: pointer;
 }
 
@@ -70,7 +72,6 @@ header nav {
 
 header button {
 	background: transparent;
-	padding: 1rem;
 	border: none;
 	cursor: pointer;
 }
@@ -100,7 +101,7 @@ header button {
 
 header .media-links {
 	display: flex;
-	gap: 3rem;
+	gap: clamp(1rem, 2vw, 3rem);
 }
 
 header i {
@@ -122,7 +123,7 @@ main {
 }
 
 h2 {
-	font-size: 3.5rem;
+	font-size: clamp(2rem, 7vw, 3.5rem);
 	margin-bottom: 4rem;
 }
 
@@ -135,7 +136,7 @@ h2 {
 
 .divider-primary {
 	width: 4.5rem;
-	height: 0.5rem;
+	height: clamp(0.3rem, 1vw, 0.5rem);
 	background: linear-gradient(90deg, #ae36fe -50%, #04d7d9 150%);
 	border-radius: 25px;
 	margin: 2rem 0;
@@ -176,7 +177,7 @@ header button {
 }
 
 .hero-text h1 {
-	font-size: 4rem;
+	font-size: clamp(2rem, 7vw, 4rem);
 	font-weight: 600;
 	position: relative;
 	z-index: 2;
@@ -186,17 +187,18 @@ header button {
 	position: relative;
 	max-width: 68%;
 	margin-top: 2rem;
-	line-height: 3rem;
-	font-size: 1.8rem;
+	line-height: clamp(1.5rem, 4vw, 3rem);
+
+	font-size: clamp(1rem, 3vw, 1.8rem);
 	z-index: 12;
 	color: #c0c0c0;
-	margin-bottom: 3rem;
+	margin-bottom: 1rem;
 }
 
 .hero-text .cta {
 	display: inline-block;
 	color: white;
-	font-size: 1.5rem;
+	font-size: clamp(1rem, 4vw, 1.5rem);
 	font-weight: 400;
 	margin-right: 1.5rem;
 	padding: 1rem 2rem;
@@ -206,6 +208,7 @@ header button {
 	border: none;
 	cursor: pointer;
 	transition: 0.5s ease;
+	margin-top: 2rem;
 	z-index: 90;
 }
 
@@ -319,13 +322,13 @@ header button {
 }
 
 .project-title {
-	font-size: 2rem;
+	font-size: clamp(1.5rem, 7vw, 2rem);
 }
 
 .project-description {
 	grid-column: 1;
 	margin: 1rem 0;
-	line-height: 1.5rem;
+	line-height: clamp(1.5rem, 2vw, 1.7rem);
 }
 
 .feature-list li {
@@ -357,17 +360,23 @@ header button {
 }
 
 .tech-wrapper > p {
-	font-size: 1.5rem;
+	font-size: clamp(1rem, 3vw, 1.5rem);
+
 	max-width: 60%;
 	color: #878b92;
-	line-height: 2.5rem;
+	line-height: clamp(1.5rem, 5vw, 2.5rem);
 }
 
 .tech-cards-wrapper {
 	margin-top: 4rem;
-	display: flex;
-	justify-content: space-between;
-	max-width: 95%;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+	grid-auto-rows: 1fr;
+	gap: 3rem;
+}
+
+.tech-card {
+	max-width: 70%;
 }
 
 .tech-card p {
@@ -404,10 +413,10 @@ header button {
 }
 
 .about-wrapper > p {
-	font-size: 1.5rem;
+	font-size: clamp(1rem, 3vw, 1.5rem);
 	max-width: 60%;
 	color: #878b92;
-	line-height: 2.5rem;
+	line-height: clamp(1.5rem, 5vw, 2.5rem);
 }
 
 .timeline-wrapper {
@@ -509,4 +518,59 @@ footer {
 .footer-wrapper i:hover {
 	transform: scale(1.1);
 	transition: 0.5s ease;
+}
+
+@media (max-width: 720px) {
+	.nav-list {
+		display: none;
+	}
+
+	.cta {
+		padding: 0.5rem 1rem;
+	}
+
+	#menu-btn {
+		display: initial;
+	}
+
+	.hero-text p {
+		max-width: 100%;
+	}
+
+	.cards-wrapper {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+		grid-auto-rows: 1fr;
+		/* grid-template-columns: 1fr 1fr; */
+		gap: 5rem;
+	}
+
+	.projects-wrapper,
+	.hero-wrapper,
+	.about-wrapper,
+	.tech-wrapper,
+	.footer-wrapper,
+	.div-container {
+		padding: 2rem;
+	}
+
+	.cards-wrapper {
+		grid-auto-rows: auto;
+		gap: 2.5rem;
+	}
+
+	.contact-info,
+	.bottom {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.bottom small {
+		margin-top: 1rem;
+		order: 2;
+	}
+
+	.contact-info h4 {
+		margin: 1rem 0 0.5rem 0;
+	}
 }
